[gd_scene load_steps=7 format=3 uid="uid://bq0siqu8hf4j7"]

[ext_resource type="Texture2D" uid="uid://vsfbqykyiyo1" path="res://scenes/battle/icons/Menu.png" id="1_4c7g0"]
[ext_resource type="Script" path="res://scenes/battle/controls.gd" id="1_wkjum"]
[ext_resource type="Texture2D" uid="uid://bwpdvqh7lck3h" path="res://scenes/battle/icons/surrender.png" id="2_ix5hx"]
[ext_resource type="Texture2D" uid="uid://bkax03ftvp3oq" path="res://scenes/battle/icons/retire.png" id="3_hhax2"]
[ext_resource type="Texture2D" uid="uid://cueb1eabnweic" path="res://scenes/battle/icons/wait.png" id="4_sd0jc"]
[ext_resource type="Texture2D" uid="uid://ifm5vk3te7vo" path="res://scenes/battle/icons/defend.png" id="5_0dl5n"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wkjum")

[node name="OptionsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -80.0
offset_right = 80.0
grow_vertical = 0
scale = Vector2(0.9, 0.9)
icon = ExtResource("1_4c7g0")
icon_alignment = 1

[node name="SurrenderButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 85.0
offset_top = -80.0
offset_right = 165.0
grow_vertical = 0
scale = Vector2(0.9, 0.9)
icon = ExtResource("2_ix5hx")
icon_alignment = 1

[node name="RetreatButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 171.0
offset_top = -80.0
offset_right = 251.0
grow_vertical = 0
scale = Vector2(0.9, 0.9)
icon = ExtResource("3_hhax2")
icon_alignment = 1

[node name="WaitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -80.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.9, 0.9)
icon = ExtResource("4_sd0jc")
icon_alignment = 1

[node name="DefendButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -167.0
offset_top = -80.0
offset_right = -87.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.9, 0.9)
icon = ExtResource("5_0dl5n")
icon_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -366.0
offset_top = -80.0
offset_right = 553.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.9, 0.9)
theme_override_constants/separation = 0

[connection signal="pressed" from="SurrenderButton" to="." method="surrender_button_clicked"]
[connection signal="pressed" from="RetreatButton" to="." method="retreat_button_clicked"]
[connection signal="pressed" from="WaitButton" to="." method="wait_button_clicked"]
[connection signal="pressed" from="DefendButton" to="." method="defend_button_clicked"]
